<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/players"
        android:icon="@drawable/ic_players"
        android:title="@string/players"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/night"
        android:icon="@drawable/ic_night"
        android:title="@string/night"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/vote"
        android:icon="@drawable/ic_vote"
        android:title="@string/vote"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/timer"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/random"
        android:icon="@drawable/ic_random"
        android:title="@string/random"
        android:orderInCategory="5"/>
</menu>