<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playersMode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playersRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/addPlayerBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPlayerBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/btnColor"
                android:text="@string/addPlayer"
                android:textColor="@color/btnTextColor"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nightMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/voteMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timerMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:barrierMargin="20dp"
                app:cardBackgroundColor="@color/bcgColor"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/timerTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/timerStartText"
                    android:textColor="@color/white"
                    android:textSize="60sp" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timerRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/timerAddTimerBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timerAddTimerBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/btnColor"
                android:gravity="center"
                android:text="@string/addTimer"
                android:textColor="@color/btnTextColor"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/timerStartBtn"
                app:layout_constraintEnd_toEndOf="@+id/timerRecyclerView"
                app:layout_constraintStart_toStartOf="@+id/timerRecyclerView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timerStartBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/btnColor"
                android:gravity="center"
                android:text="@string/startTimer"
                android:textColor="@color/btnTextColor"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/timerStopBtn"
                app:layout_constraintEnd_toEndOf="@+id/timerAddTimerBtn"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="@+id/timerAddTimerBtn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timerStopBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/btnColor"
                android:gravity="center"
                android:text="@string/stopTimer"
                android:textColor="@color/btnTextColor"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/timerStartBtn"
                app:layout_constraintStart_toStartOf="@+id/timerStartBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/randomMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/randomCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="724dp"
                app:barrierMargin="20dp"
                app:cardBackgroundColor="@color/bcgColor"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/randomStartRange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:ems="10"
                        android:hint="@string/startRange"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="28sp" />

                    <EditText
                        android:id="@+id/randomEndRange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:ems="10"
                        android:hint="@string/endRange"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/randomResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="100sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/randomGenerateBtn"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/btnColor"
                android:gravity="center"
                android:text="@string/generate"
                android:textColor="@color/btnTextColor"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/randomCardView"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/randomClearBtn"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/btnColor"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/btnTextColor"
                android:textSize="40sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/randomGenerateBtn"
                app:layout_constraintStart_toStartOf="@+id/randomGenerateBtn"
                app:layout_constraintTop_toBottomOf="@+id/randomGenerateBtn"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bcgColor"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>