<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".EditTimerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/addPlayerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/bcgColor"
            app:cardBackgroundColor="@color/bcgColor"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="Время"
                android:inputType="time"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:visibility="visible"
            app:cardBackgroundColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/doneBtn"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0"
                    android:backgroundTint="@color/btnColor"
                    android:text="@string/done"
                    android:textColor="@color/btnTextColor"
                    android:textSize="34sp"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delTimerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0"
                    android:backgroundTint="@color/btnColor"
                    android:text="@string/delTimer"
                    android:textColor="@color/btnTextColor"
                    android:textSize="34sp"
                    app:cornerRadius="20dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/timerSampleCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/bcgColor"
            app:cardBackgroundColor="@color/bcgColor"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/timerSample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/timerExampleText"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>